# sparrow-query

./: README.md  pyproject.toml
sparrow_query/: get_data.py
